# heckel_diff

./: .gitignore  CMakeLists.txt  CPPLINT.cfg  LICENSE.md  README.md
example/: CMakeLists.txt  heckel_diff_example.cpp  main.cpp
src/: CMakeLists.txt  algorithm.cpp  algorithm.hpp  hd_algorithm.cpp  hd_algorithm.hpp  helpers.hpp  main.cpp
src/include/: heckel_diff.hpp
src/src/: heckel_diff.cpp  heckel_diff.hpp
test/: CMakeLists.txt  CMakeLists.txt.in  algorithm_tests.cpp  test_main.cpp
test/include/: helpers.hpp
tests/: CMakeLists.txt  algorithm_tests.cpp  test_main.cpp
